fix horizantal scrollbar issue

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 
 
-html > * {
+html, body {
     margin: 0;
     padding: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+
 }  
+
 
 @font-face {
     font-family: norse-bold;
@@ -26,13 +28,15 @@ html > * {
     font-size: 16px;
 }
 .main-container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
+    width: inherit;
+    height: inherit;
+display: grid;
+grid-template: auto / 40% 60%;
 }
 .container-1 {
-    width: 40vw;
-    height: 100vh;
+/*     width: 40%;
+ */    height: 100%;
+
 
     background-image: url(images/large-img-unszd.avif);
     overflow: hidden;
@@ -45,6 +49,7 @@ html > * {
     width: 100%;
     font-family: norse-bold; /* good practice is to add a backup font, but zzzzz */
     height: auto;
+
 
     display: flex;
     justify-content: center;
@@ -73,17 +78,18 @@ html > * {
 }
 
 .container-2 {
-    width: 60vw;
-    height: 100vh;
+/*     width: 60%;
+ */    height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+
 }
 
 .description {
     overflow: hidden;
     background-color: rgba(230, 230, 230, 0.558);
-    width: inherit;
+    width: 100%;
     height: 33%;
     font-size: 1rem;
 }
@@ -109,11 +115,14 @@ form {
 
 form h2 {
     margin: 0.83em 0 0 0;
+    max-width: max-content;
+
 }
 
 #instructions {
     margin: 0 0 1em 0;
     font-weight: 100;
+    max-width: max-content;
 }
 
 form .info-container {
@@ -132,8 +141,9 @@ form .info-container {
 .col-one > div, .col-two > div {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 99%;
     margin: 15px 1px;
+    box-sizing: border-box;
 }
 
 form input {
@@ -141,6 +151,7 @@ form input {
     padding: 5px;
     margin: 2px;
     border: 1px solid #c8cace;
+
 }
 
 form input:focus {
@@ -191,6 +202,8 @@ span.required {
 
 .submit-container p {
     font-size: 0.9rem;
+    max-width: max-content;
+
 }
 
 .submit-container a {
